fe/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feproject
  namespace: test
  labels:
    app: feproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feproject
  template:
    metadata:
      labels:
        app: feproject
    spec:
      containers:
        - name: feproject
          image: arthurfonichkin/feproject:test-b9412b83edbb27292d6e724458c531d89dd0d175
          ports:
            - containerPort: 80
          env: null
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 1
