fe/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feproject
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "fetest.k8s-16.sa"
spec:
  ingressClassName: nginx
  rules:
    - host: fetest.k8s-15.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feproject-service
                port:
                  number: 80
