fe/test/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: feproject-service
  namespace: test
spec:
  selector:
    app: feproject
  ports:
    - port: 80
      targetPort: 80
